Playable update for 1.21