@@ -1,15 +1,13 @@
 package com.github.argon4w.hotpot.items;
 
 import com.github.argon4w.hotpot.HotpotModEntry;
-import com.github.argon4w.hotpot.HotpotTagsHelper;
 import com.github.argon4w.hotpot.LevelBlockPos;
 import com.github.argon4w.hotpot.blocks.HotpotBlockEntity;
+import com.github.argon4w.hotpot.client.items.HotpotClientItemExtensions;
 import com.github.argon4w.hotpot.contents.HotpotCookingRecipeContent;
 import com.github.argon4w.hotpot.items.components.HotpotSkewerDataComponent;
 import com.github.argon4w.hotpot.soups.IHotpotSoupType;
-import net.minecraft.client.renderer.BlockEntityWithoutLevelRenderer;
 import net.minecraft.core.component.DataComponents;
-import net.minecraft.nbt.Tag;
 import net.minecraft.world.InteractionHand;
 import net.minecraft.world.InteractionResultHolder;
 import net.minecraft.world.entity.LivingEntity;
@@ -21,12 +19,20 @@ import net.minecraft.world.level.Level;
 import net.neoforged.neoforge.client.extensions.common.IClientItemExtensions;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Optional;
 import java.util.function.Consumer;
+import java.util.function.UnaryOperator;
 
 public class HotpotSkewerItem extends Item implements IHotpotItemContainer, IHotpotSpecialHotpotCookingRecipeItem {
     public HotpotSkewerItem() {
-        super(new Properties().component(HotpotModEntry.HOTPOT_SKEWER_DATA_COMPONENT, new HotpotSkewerDataComponent(List.of())));
+        super(new Properties().component(HotpotModEntry.HOTPOT_SKEWER_DATA_COMPONENT, HotpotSkewerDataComponent.EMPTY));
+    }
+
+    @Override
+    public int getMaxStackSize(ItemStack itemStack) {
+        return isSkewerEmpty(itemStack) ? super.getMaxStackSize(itemStack) : 1;
     }
 
     @NotNull
@@ -39,19 +45,19 @@ public class HotpotSkewerItem extends Item implements IHotpotItemContainer, IHot
             return InteractionResultHolder.pass(player.getItemInHand(hand));
         }
 
-        ItemStack firstItemStack = itemStacks.get(0);
+        ItemStack firstItemStack = itemStacks.getFirst();
 
         if (firstItemStack.isEmpty()) {
             return InteractionResultHolder.pass(player.getItemInHand(hand));
         }
 
-        if (firstItemStack.has(DataComponents.FOOD) && player.canEat(true)) {
+        if (isFood(firstItemStack) && player.canEat(true)) {
             player.startUsingItem(hand);
             return InteractionResultHolder.consume(itemStack);
         }
 
         addToInventory(player, firstItemStack);
-        itemStacks.remove(0);
+        itemStacks.removeFirst();
 
         setSkewerItems(itemStack, itemStacks);
 
@@ -61,15 +67,6 @@ public class HotpotSkewerItem extends Item implements IHotpotItemContainer, IHot
         }
 
         return InteractionResultHolder.pass(player.getItemInHand(hand));
-    }
-
-    @Override
-    public int getMaxStackSize(ItemStack itemStack) {
-        if (isSkewerEmpty(itemStack)) {
-            return super.getMaxStackSize(itemStack);
-        }
-
-        return  1;
     }
 
     @NotNull
@@ -85,23 +82,25 @@ public class HotpotSkewerItem extends Item implements IHotpotItemContainer, IHot
             return itemStack;
         }
 
-        ItemStack foodItemStack = itemStacks.get(0);
+        ItemStack firstItemStack = itemStacks.getFirst();
 
-        if (foodItemStack.isEmpty()) {
+        if (firstItemStack.isEmpty()) {
             return itemStack;
         }
 
-        if (foodItemStack.has(DataComponents.FOOD)) {
-            itemStacks.set(0, foodItemStack.finishUsingItem(level, livingEntity));
+        if (isFood(firstItemStack)) {
+            itemStacks.set(0, firstItemStack.finishUsingItem(level, livingEntity));
         }
 
-        if (!itemStacks.get(0).has(DataComponents.FOOD)) {
-            addToInventory(player, itemStacks.get(0));
+        firstItemStack = itemStacks.getFirst();
+
+        if (!isFood(firstItemStack)) {
+            addToInventory(player, firstItemStack);
             itemStacks.set(0, ItemStack.EMPTY);
         }
 
-        if (itemStacks.get(0).isEmpty()) {
-            itemStacks.remove(0);
+        if (itemStacks.getFirst().isEmpty()) {
+            itemStacks.removeFirst();
         }
 
         if (itemStacks.isEmpty()) {
@@ -126,13 +125,13 @@ public class HotpotSkewerItem extends Item implements IHotpotItemContainer, IHot
             return UseAnim.NONE;
         }
 
-        ItemStack foodItemStack = itemStacks.get(0);
+        ItemStack foodItemStack = itemStacks.getFirst();
 
         if (foodItemStack.isEmpty()) {
             return UseAnim.NONE;
         }
 
-        if (foodItemStack.has(DataComponents.FOOD)) {
+        if (isFood(foodItemStack)) {
             return foodItemStack.getUseAnimation();
         }
 
@@ -147,27 +146,17 @@ public class HotpotSkewerItem extends Item implements IHotpotItemContainer, IHot
             return 0;
         }
 
-        ItemStack foodItemStack = itemStacks.get(0);
+        ItemStack foodItemStack = itemStacks.getFirst();
 
         if (foodItemStack.isEmpty()) {
             return 0;
         }
 
-        if (!foodItemStack.has(DataComponents.FOOD)) {
+        if (!isFood(foodItemStack)) {
             return 0;
         }
 
         return (int) (foodItemStack.getUseDuration(livingEntity) * (0.5f / 1.5f));
-    }
-
-    @Override
-    public void initializeClient(Consumer<IClientItemExtensions> consumer) {
-        consumer.accept(new IClientItemExtensions() {
-            @Override
-            public BlockEntityWithoutLevelRenderer getCustomRenderer() {
-                return HotpotModEntry.HOTPOT_SPECIAL_ITEM_RENDERER;
-            }
-        });
     }
 
     @Override
@@ -177,127 +166,62 @@ public class HotpotSkewerItem extends Item implements IHotpotItemContainer, IHot
     }
 
     @Override
-    public int getCookingTime(ItemStack itemStack, IHotpotSoupType soupType, LevelBlockPos pos, HotpotBlockEntity hotpotBlockEntity) {
-        List<HotpotCookingRecipeContent> recipeContents = getSkewerItemRecipes(itemStack, hotpotBlockEntity);
-
-        if (recipeContents.isEmpty()) {
-            return -1;
-        }
-
-        return getSkewerItemRecipes(itemStack, hotpotBlockEntity).stream()
-                .map(recipeContent -> recipeContent.remapCookingTime(soupType, recipeContent.getItemStack(), pos, hotpotBlockEntity))
-                .filter(Optional::isPresent)
-                .map(Optional::get)
-                .max(Comparator.naturalOrder())
-                .orElse(-1);
+    public int getCookingTime(IHotpotSoupType soupType, ItemStack itemStack, LevelBlockPos pos, HotpotBlockEntity hotpotBlockEntity, HotpotCookingRecipeContent content) {
+        return getSkewerItems(itemStack).stream().map(skewerStack -> content.remapCookingTime(soupType, skewerStack, pos, hotpotBlockEntity)).filter(Optional::isPresent).mapToInt(Optional::get).max().orElse(-1);
     }
 
     @Override
-    public float getExperience(ItemStack itemStack, IHotpotSoupType soupType, LevelBlockPos pos, HotpotBlockEntity hotpotBlockEntity) {
-        List<HotpotCookingRecipeContent> skewerItemRecipes = getSkewerItemRecipes(itemStack, hotpotBlockEntity);
-        float totalExperience = 0.0f;
-
-        for (HotpotCookingRecipeContent recipeContent : skewerItemRecipes) {
-            totalExperience = recipeContent.remapExperience(soupType, recipeContent.getItemStack(), pos, hotpotBlockEntity).orElse(0.0f);
-        }
-
-        return totalExperience;
+    public double getExperience(IHotpotSoupType soupType, ItemStack itemStack, LevelBlockPos pos, HotpotBlockEntity hotpotBlockEntity, HotpotCookingRecipeContent content) {
+        return getSkewerItems(itemStack).stream().map(skewerStack -> content.remapExperience(soupType, skewerStack, pos, hotpotBlockEntity)).filter(Optional::isPresent).mapToDouble(Optional::get).sum();
     }
 
     @Override
-    public ItemStack getResult(ItemStack itemStack, IHotpotSoupType soupType, LevelBlockPos pos, HotpotBlockEntity hotpotBlockEntity) {
-        List<HotpotCookingRecipeContent> skewerItemRecipes = getSkewerItemRecipes(itemStack, hotpotBlockEntity);
-        List<ItemStack> resultItemStacks = new ArrayList<>();
-
-        for (HotpotCookingRecipeContent recipeContent : skewerItemRecipes) {
-            Optional<ItemStack> result = recipeContent.remapResult(soupType, recipeContent.getItemStack(), pos, hotpotBlockEntity);
-            resultItemStacks.add(result.orElse(recipeContent.getItemStack()));
-        }
-
-        setSkewerItems(itemStack, resultItemStacks);
-
+    public ItemStack getResult(IHotpotSoupType soupType, ItemStack itemStack, LevelBlockPos pos, HotpotBlockEntity hotpotBlockEntity, HotpotCookingRecipeContent content) {
+        setSkewerItems(itemStack, getSkewerItems(itemStack).stream().map(skewerStack -> content.remapResult(soupType, skewerStack, pos, hotpotBlockEntity)).filter(Optional::isPresent).map(Optional::get).toList());
         return itemStack;
     }
 
     @Override
     public String getDescriptionId(ItemStack itemStack) {
-        if (!HotpotTagsHelper.hasHotpotTags(itemStack)) {
-            return super.getDescriptionId(itemStack);
-        }
-
-        return super.getDescriptionId(itemStack) + ".hotpot";
+        return isSkewerEmpty(itemStack) ? super.getDescriptionId(itemStack) : super.getDescriptionId(itemStack) + ".hotpot";
     }
 
-    public static ItemStack applyToSkewerItemStacks(ItemStack itemStack, Consumer<ItemStack> applier) {
-        if (!itemStack.is(HotpotModEntry.HOTPOT_SKEWER.get())) {
-            return itemStack;
-        }
-
-        if (!HotpotTagsHelper.hasHotpotTags(itemStack)) {
-            return itemStack;
-        }
-
-        if (!HotpotTagsHelper.getHotpotTags(itemStack).contains("SkewerItems", Tag.TAG_LIST)) {
-            return itemStack;
-        }
-
-        List<ItemStack> skewerItems = getSkewerItems(itemStack);
-
-        skewerItems.forEach(applier);
-        setSkewerItems(itemStack, skewerItems);
-
-        return itemStack;
-    }
-
-    public static void addSkewerItems(ItemStack itemStack, ItemStack added) {
-        if (!itemStack.is(HotpotModEntry.HOTPOT_SKEWER.get())) {
-            return;
-        }
-
-        if (added.isEmpty()) {
-            return;
-        }
-
-        ArrayList<ItemStack> itemStacks = new ArrayList<>(getSkewerItems(itemStack));
-        itemStacks.add(added);
-        setSkewerItems(itemStack, itemStacks);
+    public static boolean isFood(ItemStack itemStack) {
+        return itemStack.has(DataComponents.FOOD);
     }
 
     public static void setSkewerItems(ItemStack itemStack, List<ItemStack> itemStacks) {
-        itemStack.set(HotpotModEntry.HOTPOT_SKEWER_DATA_COMPONENT, new HotpotSkewerDataComponent(List.copyOf(itemStacks)));
+        itemStack.set(HotpotModEntry.HOTPOT_SKEWER_DATA_COMPONENT, getDataComponent(itemStack).setItemStacks(itemStacks));
+    }
+
+    public static HotpotSkewerDataComponent getDataComponent(ItemStack itemStack) {
+        return itemStack.getOrDefault(HotpotModEntry.HOTPOT_SKEWER_DATA_COMPONENT, HotpotSkewerDataComponent.EMPTY);
+    }
+
+    public static void setDataComponent(ItemStack itemStack, HotpotSkewerDataComponent dataComponent) {
+        itemStack.set(HotpotModEntry.HOTPOT_SKEWER_DATA_COMPONENT, dataComponent);
     }
 
     public static List<ItemStack> getSkewerItems(ItemStack itemStack) {
-        if (!itemStack.is(HotpotModEntry.HOTPOT_SKEWER.get())) {
-            return List.of();
-        }
-
-        if (!itemStack.has(HotpotModEntry.HOTPOT_SKEWER_DATA_COMPONENT)) {
-            return List.of();
-        }
-
-        return List.copyOf(itemStack.get(HotpotModEntry.HOTPOT_SKEWER_DATA_COMPONENT).itemStacks());
+        return List.copyOf(getDataComponent(itemStack).itemStacks());
     }
 
-    public static List<HotpotCookingRecipeContent> getSkewerItemRecipes(ItemStack itemStack, HotpotBlockEntity hotpotBlockEntity) {
-        List<ItemStack> skewerItemStacks = getSkewerItems(itemStack);
+    public static boolean isSkewerEmpty(ItemStack itemStack) {
+        return getSkewerItems(itemStack).isEmpty();
+    }
 
-        if (skewerItemStacks.isEmpty()) {
-            return List.of();
-        }
+    public static void addSkewerItems(ItemStack itemStack, ItemStack added) {
+        setDataComponent(itemStack, getDataComponent(itemStack).addItemStack(added));
+    }
 
-        return skewerItemStacks.stream()
-                .map(skewerItemStack -> new HotpotCookingRecipeContent(skewerItemStack, hotpotBlockEntity))
-                .toList();
+    public static ItemStack applyToSkewerItemStacks(ItemStack itemStack, UnaryOperator<ItemStack> operator) {
+        itemStack.set(HotpotModEntry.HOTPOT_SKEWER_DATA_COMPONENT, getDataComponent(itemStack).applyToItemStacks(operator));
+        return itemStack;
     }
 
     public static void addToInventory(Player player, ItemStack itemStack) {
         if (!player.getInventory().add(itemStack)) {
             player.drop(itemStack, false);
         }
-    }
-
-    public static boolean isSkewerEmpty(ItemStack itemStack) {
-        return getSkewerItems(itemStack).isEmpty();
     }
 }
