@@ -1,13 +1,14 @@
 package com.github.argon4w.hotpot.placements;
 
 import com.github.argon4w.hotpot.HotpotModEntry;
+import com.github.argon4w.hotpot.LazyMapCodec;
 import com.github.argon4w.hotpot.LevelBlockPos;
 import com.github.argon4w.hotpot.blocks.HotpotPlacementBlockEntity;
 import com.github.argon4w.hotpot.items.HotpotPaperBowlItem;
+import com.mojang.serialization.Codec;
+import com.mojang.serialization.MapCodec;
+import com.mojang.serialization.codecs.RecordCodecBuilder;
 import net.minecraft.core.Direction;
-import net.minecraft.core.HolderLookup;
-import net.minecraft.nbt.CompoundTag;
-import net.minecraft.nbt.Tag;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.InteractionHand;
 import net.minecraft.world.entity.player.Player;
@@ -20,29 +21,20 @@ public class HotpotPlacedPaperBowl implements IHotpotPlacement {
     private final int pos;
     private final int directionPos;
     private final Direction direction;
-    private final SimpleItemSlot paperBowlItemSlot = new SimpleItemSlot();
+    private final SimpleItemSlot paperBowlItemSlot;
 
     public HotpotPlacedPaperBowl(int pos, Direction direction) {
         this.pos = pos;
         this.directionPos = pos + HotpotPlacements.DIRECTION_TO_POS.get(direction);
         this.direction = direction;
+        this.paperBowlItemSlot = new SimpleItemSlot();
     }
 
-    public HotpotPlacedPaperBowl(int pos, int directionPos, CompoundTag itemSlotTag, HolderLookup.Provider registryAccess) {
+    public HotpotPlacedPaperBowl(int pos, int directionPos, SimpleItemSlot paperBowlItemSlot) {
         this.pos = pos;
         this.directionPos = directionPos;
+        this.paperBowlItemSlot = paperBowlItemSlot;
         this.direction = HotpotPlacements.POS_TO_DIRECTION.get(directionPos - pos);
-        this.paperBowlItemSlot.load(itemSlotTag, registryAccess);
-    }
-
-    @Override
-    public CompoundTag save(CompoundTag compoundTag, HolderLookup.Provider registryAccess) {
-        compoundTag.putByte("Pos", (byte) pos);
-        compoundTag.putByte("DirectionPos", (byte) directionPos);
-
-        compoundTag.put("PaperBowl", paperBowlItemSlot.save(new CompoundTag(), registryAccess));
-
-        return compoundTag;
     }
 
     @Override
@@ -52,6 +44,10 @@ public class HotpotPlacedPaperBowl implements IHotpotPlacement {
 
     @Override
     public boolean interact(Player player, InteractionHand hand, ItemStack itemStack, int pos, HotpotPlacementBlockEntity hotpotPlacementBlockEntity, LevelBlockPos selfPos) {
+        if (isPaperBowlUsed()) {
+            return true;
+        }
+
         if (!itemStack.isEmpty()) {
             paperBowlItemSlot.addItem(itemStack);
             return false;
@@ -62,8 +58,7 @@ public class HotpotPlacedPaperBowl implements IHotpotPlacement {
         }
 
         hotpotPlacementBlockEntity.tryTakeOutContentViaHand(pos, selfPos);
-
-        return false;
+        return isPaperBowlUsed();
     }
 
     @Override
@@ -71,53 +66,33 @@ public class HotpotPlacedPaperBowl implements IHotpotPlacement {
         boolean consume = !hotpotPlacementBlockEntity.isInfiniteContent();
         ItemStack paperBowl = paperBowlItemSlot.getItemStack();
 
-        if (HotpotPaperBowlItem.isBowlClear(paperBowl)) {
+        if (HotpotPaperBowlItem.isPaperBowlClear(paperBowl)) {
+            return paperBowlItemSlot.getItemStack().split(1);
+        }
+
+        if (isPaperBowlUsed()) {
             return ItemStack.EMPTY;
         }
 
-        if (HotpotPaperBowlItem.isBowlEmpty(paperBowl)) {
-            removePaperBowl(hotpotPlacementBlockEntity, pos, selfPos);
+        ArrayList<ItemStack> items = new ArrayList<>(HotpotPaperBowlItem.getPaperBowlItems(paperBowl));
+        ArrayList<ItemStack> skewers = new ArrayList<>(HotpotPaperBowlItem.getPaperBowlSkewers(paperBowl));
+
+        List<ItemStack> itemStacks = tableware ? items : skewers;
+
+        if (itemStacks.isEmpty()) {
             return ItemStack.EMPTY;
         }
 
-        List<ItemStack> itemStacks;
-
-        if (tableware) {
-            itemStacks = new ArrayList<>(HotpotPaperBowlItem.getPaperBowlItems(paperBowl));
-        } else {
-            itemStacks = new ArrayList<>(HotpotPaperBowlItem.getPaperBowlSkewers(paperBowl));
-        }
-
-        if (itemStacks.size() == 0) {
-            return ItemStack.EMPTY;
-        }
-
-        ItemStack itemStack = itemStacks.get(0);
-
-        if (itemStack.isEmpty()) {
-            return ItemStack.EMPTY;
-        }
+        ItemStack itemStack = itemStacks.getFirst();
 
         if (consume) {
-            itemStacks.remove(0);
+            itemStacks.removeFirst();
         }
 
-        if (tableware) {
-            HotpotPaperBowlItem.setPaperBowlItems(paperBowl, itemStacks);
-        } else {
-            HotpotPaperBowlItem.setPaperBowlSkewers(paperBowl, itemStacks);
-        }
-
-        if (HotpotPaperBowlItem.isBowlEmpty(paperBowl)) {
-            removePaperBowl(hotpotPlacementBlockEntity, pos, selfPos);
-        }
+        HotpotPaperBowlItem.setPaperBowlItems(paperBowl, itemStacks);
+        HotpotPaperBowlItem.setPaperBowlSkewers(paperBowl, itemStacks);
 
         return itemStack;
-    }
-
-    private void removePaperBowl(HotpotPlacementBlockEntity hotpotPlacementBlockEntity, int pos, LevelBlockPos selfPos) {
-        paperBowlItemSlot.clear();
-        hotpotPlacementBlockEntity.tryRemove(pos, selfPos);
     }
 
     @Override
@@ -131,7 +106,7 @@ public class HotpotPlacedPaperBowl implements IHotpotPlacement {
     }
 
     @Override
-    public List<Integer> getPos() {
+    public List<Integer> getPoslist() {
         return List.of(pos);
     }
 
@@ -140,8 +115,17 @@ public class HotpotPlacedPaperBowl implements IHotpotPlacement {
         return this.pos == pos;
     }
 
-    public int getPos1() {
+    @Override
+    public IHotpotPlacementFactory<?> getFactory() {
+        return HotpotPlacements.PLACED_PAPER_BOWL.get();
+    }
+
+    public int getPos() {
         return pos;
+    }
+
+    public int getDirectionPos() {
+        return directionPos;
     }
 
     public Direction getDirection() {
@@ -152,25 +136,35 @@ public class HotpotPlacedPaperBowl implements IHotpotPlacement {
         this.paperBowlItemSlot.set(paperBowlItemSlot);
     }
 
+    public boolean isPaperBowlClear() {
+        return HotpotPaperBowlItem.isPaperBowlClear(paperBowlItemSlot.getItemStack());
+    }
+
+    public boolean isPaperBowlUsed() {
+        return HotpotPaperBowlItem.isPaperBowlUsed(paperBowlItemSlot.getItemStack());
+    }
+
     public SimpleItemSlot getPaperBowlItemSlot() {
         return paperBowlItemSlot;
     }
 
     public static class Factory implements IHotpotPlacementFactory<HotpotPlacedPaperBowl> {
+        public static final MapCodec<HotpotPlacedPaperBowl> CODEC = LazyMapCodec.of(() ->
+                RecordCodecBuilder.mapCodec(bowl -> bowl.group(
+                        Codec.INT.fieldOf("Pos").forGetter(HotpotPlacedPaperBowl::getPos),
+                        Codec.INT.fieldOf("DirectionPos").forGetter(HotpotPlacedPaperBowl::getDirectionPos),
+                        SimpleItemSlot.CODEC.fieldOf("PaperBowl").forGetter(HotpotPlacedPaperBowl::getPaperBowlItemSlot)
+                ).apply(bowl, HotpotPlacedPaperBowl::new))
+        );
 
         @Override
-        public HotpotPlacedPaperBowl buildFromSlots(int pos, Direction direction, HolderLookup.Provider registryAccess) {
+        public HotpotPlacedPaperBowl buildFromSlots(int pos, Direction direction) {
             return new HotpotPlacedPaperBowl(pos, direction);
         }
 
         @Override
-        public HotpotPlacedPaperBowl buildFromTag(CompoundTag compoundTag, HolderLookup.Provider registryAccess) {
-            return new HotpotPlacedPaperBowl(compoundTag.getByte("Pos"), compoundTag.getByte("DirectionPos"), compoundTag.getCompound("PaperBowl"), registryAccess);
-        }
-
-        @Override
-        public boolean isValid(CompoundTag compoundTag, HolderLookup.Provider registryAccess) {
-            return compoundTag.contains("Pos", Tag.TAG_BYTE) && compoundTag.contains("DirectionPos", Tag.TAG_BYTE) && compoundTag.contains("PaperBowl", Tag.TAG_COMPOUND);
+        public MapCodec<HotpotPlacedPaperBowl> buildFromCodec() {
+            return CODEC;
         }
 
         @Override
